--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,9 +11,9 @@ dependencies:
   meta: ^1.3.0
 
 dev_dependencies:
-  supernova:
+  supernova_lints:
     git:
       url: https://github.com/JonasWanke/supernova.git
-      path: supernova
-      ref: 6da7cfcf12aa2755ed9f7e1a59458c600ef3e1d0
+      path: supernova_lints
+      ref: 3b8fc18a1f2a65153763a8e7528f68997c00808f
   test: ^1.16.8
