--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
-name: ranges
+name: deranged
 description: Generic range and progression classes, inspired by Rust and Kotlin
 version: 0.0.0
-repository: https://github.com/JonasWanke/ranges
+repository: https://github.com/JonasWanke/deranged
 
 environment:
   sdk: ^3.5.0
